# apophthegm

./: Cargo.toml  README.md
src/: buffers.rs  chess.rs  gpu.rs  gpu_tree.rs  main.rs  misc.rs  shader.wgsl  uci.rs  wgpu_util.rs
src/chess/: board.rs  mod.rs  piece.rs  state.rs  test.rs
src/shaders/: contract.wgsl  eval.wgsl  eval_contract.wgsl  expand.wgsl  fill_max.wgsl  filter.wgsl  lib.wgsl  mod.rs
