[package]
name = "apophthegm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1.1.0"
bytemuck = "1.14.0"
enum-map = "2.7.1"
env_logger = "0.10.0"
futures-channel = "0.3.29"
log = "0.4.20"
tokio = { version = "1.33.0", features = ["full"] }
wgpu = "0.18.0"

[dev-dependencies]
ctor = "0.2.5"
pollster = "0.3.0"