[package]
name = "apophthegm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1.1.0"
bytemuck = { version = "1.14.0", features = ["derive"] }
enum-map = "2.7.1"
env_logger = "0.10.0"
float-ord = "0.3.2"
futures-channel = "0.3.29"
log = "0.4.20"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
wgpu = "0.18.0"

[dev-dependencies]
ctor = "0.2.5"
pollster = "0.3.0"
